começo de estruturação

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fascículo 1</title>
 </head>
 <body>
+    <main>
+        <h1>Principais pontos do Fascículo I</h1>
+    <section>
+
+        <h2>Capítulo 1 – Introdução</h2>
+        <p>
+        </p>
+
+        <!-- Resumo em seções: blocos curtos com os principais pontos. -->
+    </section>
+
+    <nav>
+        <!-- Link externo: botão ou card para o fascículo completo. -->
+    </nav>
+
+    </main>
+
+
     
+<!-- Menu hambúrguer: navegação para diferentes seções da mesma página.
+
+Menu Fixo
+
+Responsividade.
+
+Estrutura semântica.
+
+Reproduzir a tabela que contém referências para artigos, sítios web e ferramentas relevantes para a acessibilidade web. -->
 </body>
 </html>
