Montando a Estrutura HMTL

--- a/index.html
+++ b/index.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+ 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fascículo 1</title>
+    <title>Nivel-Café 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+ 
 <body>
-    <main>
-        <h1>Principais pontos do Fascículo I</h1>
-    <section>
-
-        <h2>Capítulo 1 – Introdução</h2>
-        <p>
-        </p>
-
-        <!-- Resumo em seções: blocos curtos com os principais pontos. -->
-    </section>
-
-    <nav>
-        <!-- Link externo: botão ou card para o fascículo completo. -->
-    </nav>
-
-    </main>
-
+ 
+    <header id="cabecalho">
+        <nav id="menu_fixo">
+            <ul>
+                <li>Capitulo 1</li>
+                <li>Capitulo 2</li>
+                <li>Capitulo 3</li>
+                <li>Capitulo 4</li>
+            </ul>
+        </nav>
+    </header>
 
     
-<!-- Menu hambúrguer: navegação para diferentes seções da mesma página.
-
-Menu Fixo
-
-Responsividade.
-
-Estrutura semântica.
-
-Reproduzir a tabela que contém referências para artigos, sítios web e ferramentas relevantes para a acessibilidade web. -->
+ 
+    <section id="sessao_1">
+        <div>
+            <h2>Capitulo 1</h2>
+            <p>
+                No primeiro capítulo, a cartilha é introduzida como um material que pretende explicar a acessibilidade de maneira clara e prática. O texto mostra a quem ela se destina: cidadãos que desejam cobrar seus direitos, gestores e profissionais de tecnologia que precisam desenvolver projetos acessíveis e também membros do sistema de justiça e fiscalização. Além disso, apresenta os objetivos do material, que são contextualizar o tema, mostrar as barreiras enfrentadas pelas pessoas, oferecer diretrizes práticas e estimular a cobrança social por acessibilidade nos ambientes digitais. O capítulo também informa que este é apenas o primeiro fascículo de uma série planejada, que tratará de legislação, benefícios, público-alvo, práticas de desenvolvimento, manutenção e avaliação de acessibilidade.
+            </p>
+        </div>
+    </section>
+ 
+    <section id="sessao_2">
+        <h2>Capitulo 2</h2>
+        <p>
+            O segundo capítulo aprofunda o conceito de acessibilidade e de acessibilidade na web. Ele começa diferenciando Internet e Web, destacando como as páginas são estruturadas e acessadas. Em seguida, aborda o que significa tornar algo acessível, a partir de definições legais, técnicas e sociais. A acessibilidade é entendida como a possibilidade de qualquer pessoa perceber, compreender e interagir com conteúdos de forma autônoma e segura. No caso da web, isso implica garantir que pessoas com diferentes condições — sejam deficiências, idade avançada ou restrições temporárias — possam acessar serviços e informações em igualdade de condições. O capítulo também apresenta a ideia de desenho universal, que é projetar recursos para todos, sem necessidade de adaptações posteriores, exemplificando com rampas, legendas, audiodescrição e recursos tecnológicos adaptáveis. Por fim, destaca os principais componentes que influenciam a acessibilidade web, como o conteúdo publicado, os navegadores, as tecnologias assistivas, o conhecimento do usuário, o trabalho dos desenvolvedores e as ferramentas de autoria e de avaliação.
+        </p>
+    </section>
+ 
+    <section id="sessao_3">
+        <h2>Capitulo 3</h2>
+        <p>
+            O terceiro capítulo discute quem são os beneficiados com uma web acessível. As pessoas com deficiência são as mais diretamente impactadas, pois enfrentam barreiras que, muitas vezes, impedem seu acesso a serviços essenciais de educação, trabalho e saúde. São apresentados exemplos concretos de uso de tecnologias assistivas, como leitores de tela para pessoas cegas, dispositivos braille para surdocegos, ampliadores para quem tem baixa visão, além de ferramentas de apoio para pessoas com dislexia, TDAH ou limitações motoras. O texto, entretanto, deixa claro que a acessibilidade não beneficia apenas esse público: idosos, pessoas com baixa escolaridade, usuários com limitações temporárias, quem acessa a internet em dispositivos móveis ou em conexões lentas, e até mesmo mecanismos de busca, como o Google, ganham quando os conteúdos são produzidos de forma acessível. Assim, o capítulo mostra que acessibilidade é uma prática que amplia a usabilidade e favorece toda a sociedade.
+        </p>
+    </section>
+ 
+    <section id="sessao_4">
+        <h2>Capitulo 4</h2>
+        <p>
+            O quarto e último capítulo reúne referências para estudo e aplicação prática da acessibilidade na web. Ele indica artigos, tutoriais e guias introdutórios para quem está começando, mas também recomenda ferramentas de validação de código, avaliadores de acessibilidade, tecnologias assistivas como leitores de tela e listas de discussão mantidas pelo W3C Brasil. Além disso, traz referências bibliográficas importantes, incluindo decretos, normas técnicas da ABNT, documentos da ONU e das diretrizes internacionais do W3C, como as recomendações do grupo WAI (Web Accessibility Initiative).
+        </p>
+    </section>
+ 
+ 
+ 
 </body>
+ 
 </html>
+ 
+ 
