--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
         </section>
     </main>
 
+    <table >
+        <tr>
+            <th>Artigos.Nome e hiperlink</th>
+            <th>Perfis</th>
+        </tr>
+        <tr>
+            <td>01</td>
+            <td>Introdução à acessibilidade na Web (W3C – tradução Maujor.com) http://www.maujor.com/w3c/introwac.html</td>
+            <td>A</td>
+            <td>B</td>
+            <td>C</td>
+            <td>D</td>
+        </tr>
+    </table>
+
 
 
 
