--- a/index.html
+++ b/index.html
@@ -103,19 +103,30 @@
         </section>
     </main>
 
-    <table >
-        <tr>
-            <th>Artigos.Nome e hiperlink</th>
-            <th>Perfis</th>
-        </tr>
-        <tr>
-            <td>01</td>
-            <td>Introdução à acessibilidade na Web (W3C – tradução Maujor.com) http://www.maujor.com/w3c/introwac.html</td>
-            <td>A</td>
-            <td>B</td>
-            <td>C</td>
-            <td>D</td>
-        </tr>
+    <table>
+        <thead>
+            <!-- tr = coluna
+                    th = titulo
+                    td = linha -->
+            <tr>
+                <th></th>
+                <th>Artigos.Nome e hiperlink</th>
+                <th>Perfis</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>01</td>
+                <td>Introdução à acessibilidade na Web (W3C – tradução Maujor.com)
+                    <a href="http://www.maujor.com/w3c/introwac.html"> http://www.maujor.com/w3c/introwac.html</a>
+                </td>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+                <td>D</td>
+            </tr>
+        </tbody>
+
     </table>
 
 
@@ -125,3 +136,4 @@
 </body>
 
 </html>
+
