--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
+    
 
     <header id="cabecalho">
+        <p>Cartilha ACESSIBILIDADE NA WEB</p>
         <nav id="menu_fixo">
             <ul>
                 <a href="#capitulo1"><li>Capitulo 1</li></a>
@@ -22,6 +24,7 @@
     </header>
 
     <main id="principal">
+        <h1>Prefácio - </h1>
         <h2 id="capitulo1">Capitulo 1</h2>
         <section id="sessao_1">
 
